--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Cache Composer packages
       uses: php-actions/phpunit@v9
       with:
-       command: phpunit CalculadoraTest.php
+       configuration: phpunit.xml
